traefik/overlays/traefik-dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
